--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -5,17 +5,26 @@
 		<img src="/img/logo.svg" alt="Kaldi logo" class="br0 db mb0 w-100"/>
 	</a>
 
+
 	<!-- Primary Nav -->
+	{{ if $.Site.Menus.main }}
 	<ul class="flex b grey-3">
-		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
 
-		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
+		{{ range $.Site.Menus.main }}
+		<li>
+			<a href="{{ .URL }}" class="pa3 no-underline db">{{ .Name }}</a>
 
-		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
+			{{ if .HasChildren }}
+			<ul class="flex b grey-3">
+				{{ range .Children }}
+				<li><a href="{{ .URL }}" class="pa3 no-underline db">{{ .Name }}</a></li>
+				{{ end }}
+			</ul>
+			{{ end }}
+		</li>
 
-		<li><a href="/coffee" class="pa3 no-underline db">Coffee</a></li>
-
-		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
+		{{ end }}
 	</ul>
+	{{ end }}
 
 </nav>
