Make posts's image responsive + clean up old style classes

--- a/site/layouts/section/values.html
+++ b/site/layouts/section/values.html
@@ -2,7 +2,7 @@
 
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
-<div class="mw7 center ph3 pt4">
+<div>
 
   {{ range $index, $element := .Params.values }}
     {{ if modBool $index 2 }}
