--- a/site/layouts/partials/blog.html
+++ b/site/layouts/partials/blog.html
@@ -1,18 +1,18 @@
-<div class="bg-off-white pv4">
-	<div class="ph3 mw7 center">
+<div>
+	<div>
 
-		<h2 class="f2 b lh-title mb3">Latest stories</h1>
+		<h2>Latest stories</h2>
 
-		<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
+		<div>
 			{{ range first 4 (where .Data.Pages "Type" "post") }}
-				<div class="ph1-ns w-50-ns flex">
+				<div>
 					{{ .Render "li" }}
 				</div>
 			{{ end }}
 		</div>
 
 		<div class="tc">
-			<a href="/post" class="btn raise">Read more</a>
+			<a href="/post" >Read more</a>
 		</div>
 
 	</div>
