--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -1,20 +1,19 @@
 <!-- Contact -->
-<div class="mb4">
-  <h4 class="f3 b lh-title mb3 tc">Drop us a line below</h4>
+  <h4>Drop us a line below</h4>
 
   <form action="">
-    <div class="flex-l mhn1-l">
+    <div>
           <!-- Name -->
-      <div class="ph1-l w-50-l">
+      <div>
         <fieldset>
-          <input type="text" id="name" placeholder="Name" class="w-100 mb2">
+          <input type="text" id="name" placeholder="Name">
           <label for="name">Name</label>
         </fieldset>
       </div>
           <!-- Email -->
-      <div class="ph1-l w-50-l">
+      <div>
         <fieldset>
-          <input type="email" id="email" placeholder="Email" class="w-100 mb2">
+          <input type="email" id="email" placeholder="Email">
           <label for="email">Email</label>
         </fieldset>
       </div>
@@ -22,12 +21,11 @@
 
         <!-- Message -->
     <fieldset>
-      <textarea name="name" placeholder="Your message" rows="8" cols="80" id="message" class="w-100"></textarea>
+      <textarea name="name" placeholder="Your message" rows="8" cols="80" id="message" ></textarea>
       <label for="message">Your message</label>
     </fieldset>
         <!-- Button -->
-    <div class="tc">
-      <button type="submit" class="btn w-100 w-auto-ns raise">Submit</button>
+    <div >
+      <button type="submit" >Submit</button>
     </div>
   </form>
-</div>
