--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,14 +1,14 @@
-<div class="pv5 pv6-l ph3 bg-center cover" style="background-image: url('{{.imageUrl}}')">
-  <div class="mw7 center ph3">
-    <div class="db mb3">
-      <div class="mw7 relative bg-fix-primary mb3">
-        <h1 class="f2 f1-l b di lh-title mb3 white mw6 bg-primary">
+<div style="background-image: url('{{.imageUrl}}')">
+  <div>
+    <div>
+      <div>
+        <h1>
           {{.title}}
         </h1>
       </div>
-      <div class="mw7 relative bg-fix-primary">
+      <div>
         {{ if .subtitle }}
-        <p class="b f4 di lh-title mb3 white mw6 bg-primary">
+        <p>
           {{.subtitle}}
         </p>
         {{ end }}
