--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,30 +1,37 @@
-<nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-	<!-- Logo -->
-	<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
-		<img src="/img/logo.svg" alt="Kaldi logo" class="br0 db mb0 w-100"/>
-	</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarNavDropdown">
 
+		<!-- Primary Nav -->
+		{{ if $.Site.Menus.main }}
+		<ul class="navbar-nav">
 
-	<!-- Primary Nav -->
-	{{ if $.Site.Menus.main }}
-	<ul class="flex b grey-3">
-
-		{{ range $.Site.Menus.main }}
-		<li>
-			<a href="{{ .URL }}" class="pa3 no-underline db">{{ .Name }}</a>
-
+			{{ range $.Site.Menus.main }}
 			{{ if .HasChildren }}
-			<ul class="flex b grey-3">
-				{{ range .Children }}
-				<li><a href="{{ .URL }}" class="pa3 no-underline db">{{ .Name }}</a></li>
-				{{ end }}
-			</ul>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle"
+				   href="{{ .URL }}"
+				   id="navbarDropdownMenuLink"
+				   data-toggle="dropdown"
+				   aria-haspopup="true"
+				   aria-expanded="false">{{ .Name }}
+				</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					{{ range .Children }}
+					<a class="dropdown-item" href="{{ .URL }}">{{ .Name }}</a>
+					{{ end }}
+				</div>
+			</li>
+			{{else}}
+			<li class="nav-item">
+				<a class="nav-link" href="{{ .URL }}">{{ .Name }}</a>
+			</li>
 			{{ end }}
-		</li>
-
+			{{ end }}
+		</ul>
 		{{ end }}
-	</ul>
-	{{ end }}
-
+	</div>
 </nav>
