--- a/site/layouts/partials/table-column.html
+++ b/site/layouts/partials/table-column.html
@@ -1,22 +1,22 @@
-<div class="ph2">
+<div>
 
 	<!-- Title -->
-	<h3 class="b f5 grey-3 tc lh-title mb3">{{.plan}}</h3>
+	<h3>{{.plan}}</h3>
 
 	<!-- Price -->
-	<p class="primary f1 b tc lh-title center">
-		<span class="f4">$</span>{{.price}}
+	<p>
+		<span>$</span>{{.price}}
 	</p>
 
 	<!-- Description -->
-	<p class="b">{{.description}}</p>
+	<p>{{.description}}</p>
 
 	<!-- Features -->
 	<ul>
 		{{ $itemCount := len .items }}
 		{{ range $index, $item := .items }}
 		<li>
-			<p class="{{ if ne (add 1 $index) $itemCount }}pb2 mb2 divider-grey{{ end }}">{{ $item }}</p>
+			<p>{{ $item }}</p>
 		</li>
 		{{ end }}
 	</ul>
